// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`$toData: $id 1`] = `"data->>'id'"`;

exports[`$toData: $id = 42 1`] = `"data->>'id' = 42"`;

exports[`$toData: $phone.home = 42 1`] = `"data->>'phone.home' = 42"`;

exports[`$toData: $phone_home = 42 1`] = `"data->>'phone_home' = 42"`;

exports[`$toData: $name = "foo" and $age = 42 1`] = `"data->>'name' = "foo" and data->>'age' = 42"`;

exports[`sql: where name 1`] = `
{
  "parts": [
    "where data->>'name' = ",
    "",
  ],
  "values": [
    "yoda",
  ],
}
`;

exports[`sql: where name and age 1`] = `
{
  "parts": [
    "where data->>'name' = ",
    " and data->>'age' = ",
    "",
  ],
  "values": [
    "yoda",
    42,
  ],
}
`;

exports[`sql: limit 1`] = `
{
  "parts": [
    "limit ",
    "",
  ],
  "values": [
    42,
  ],
}
`;

exports[`crud 1`] = `
[
  "yoda",
  "grogu",
]
`;

exports[`crud 2`] = `
[
  "luke",
  "leia",
]
`;

exports[`crud 3`] = `[]`;
